--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -2,6 +2,9 @@
 @import "_global/typography";
 @import "_global/layout";
 
+@import "_atoms/buttons";
+@import "_atoms/figures";
+
 @import "_molecules/navigation";
 
 @import "_organisms/headers";
