Added Accordions and blank section landing pages
Continued to refine layout styles; likely going to have to start layout css from scratch to achieve the simplicity I'm looking for.

--- a/v2/css/_global/_layout.scss
+++ b/v2/css/_global/_layout.scss
@@ -29,11 +29,6 @@ main:after {
 
 .row > .row {padding: 2rem 0 0;}
 
-/*
-h1 + .row,
-h2 + .row {padding: 0.4rem 0 0;}
-*/
-
 .row > h1 + .row,
 .row > h2 + .row,
 .row > h3 + .row {padding: 0.4rem 0 0;}
@@ -48,66 +43,67 @@ h2 + .row {padding: 0.4rem 0 0;}
     padding: 0;
   }
   .column:nth-of-type(2n) {padding: 1rem 0 0;}
-  h1 ~ .column {padding: 0.4rem 0 0;}
-  h2 ~ .column {padding: 0.4rem 0 0;}
-  h3 ~ .column {padding: 0.4rem 0 0;}
 }
+
+h1 + .column {padding: 0.4rem 0 0;}
+h2 + .column {padding: 0.4rem 0 0;}
+h3 + .column {padding: 0.4rem 0 0;}
 
 @media (min-width: 48rem) {
   .row {
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
-    .wide {width: 100%;}
-    .fifty {
-      width: 100%;
-      .column {width: 50%;}
-      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
+  }
+  .row.wide {flex-direction: column;}
+  .row.fifty {
+    width: 100%;
+    .column {width: 50%;}
+    .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
+    .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
+  }
+  .row.golden.left {
+    width: 100;
+    .column:nth-of-type(1n) {
+      width: 62%;
+      padding: 0 1rem 0 0;
     }
-    .row.golden.left {
-      width: 100;
-      .column:nth-of-type(1n) {
-        width: 62%;
-        padding: 0 1rem 0 0;
-      }
-      .column:nth-of-type(2n) {
-        width: 38%;
-        padding: 0 0 0 1rem;
-      }
-    }
-    .row.golden.right {
-      width: 100;
-      .column:nth-of-type(1n) {
-        width: 38%;
-        padding: 0 1rem 0 0;
-      }
-      .column:nth-of-type(2n) {
-        width: 62%;
-        padding: 0 0 0 1rem;
-      }
-    }
-    .row.thirds {
-      width: 100%;
-      .column {width: 33.3%;}
-      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(2n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(3n) {padding: 0 1rem 0 0;}
-    }
-    .row.fourths {
-      width: 100%;
-      .column {width: 50%;}
-      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
-      .column:nth-of-type(3n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(4n) {padding: 0 0 0 1rem;}
+    .column:nth-of-type(2n) {
+      width: 38%;
+      padding: 0 0 0 1rem;
     }
   }
+  .row.golden.right {
+    width: 100;
+    .column:nth-of-type(1n) {
+      width: 38%;
+      padding: 0 1rem 0 0;
+    }
+    .column:nth-of-type(2n) {
+      width: 62%;
+      padding: 0 0 0 1rem;
+    }
+  }
+  .row.thirds {
+    width: 100%;
+    .column {width: 33.3%;}
+    .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
+    .column:nth-of-type(2n) {padding: 0 1rem 0 0;}
+    .column:nth-of-type(3n) {padding: 0 1rem 0 0;}
+  }
+  .row.fourths {
+      width: 100%;
+      .column {width: 50%;}
+      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
+      .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
+      .column:nth-of-type(3n) {padding: 1rem 1rem 0 0;}
+      .column:nth-of-type(4n) {padding: 1rem 0 0 1rem;}
+    }
 }
 
 @media (min-width: 64rem) {
   .row {
-    .row.fourths {
+    .fourths {
       .column {width: 25%;}
       .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
       .column:nth-of-type(2n) {padding: 0 1rem 0 0;}
