--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -6,6 +6,7 @@
 @import "_atoms/figures";
 
 @import "_molecules/navigation";
+@import "_molecules/accordions";
 
 @import "_organisms/headers";
 @import "_organisms/footers";
