--- a/v2/style/layout/layout.html
+++ b/v2/style/layout/layout.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="../../index.html">
+        <a href="../../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
         </a>
       </div>
@@ -25,11 +25,11 @@
         </button>
         <ul id="header-navigation">
           <li>About</li>
-          <li><a href="../atoms/atoms.html">Atoms</a></li>
-          <li><a href="../molecules/molecules.html">Molecules</a></li>
-          <li><a href="../organisms/organisms.html">Organisms</a></li>
-          <li><a href="../style/style.html">Style</a></li>
-          <li><a href="../downloads/downloads.html">Downloads</a></li>
+          <li><a href="../../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../../organisms/organisms.html">Organisms</a></li>
+          <li><a href="../../style/style.html">Style</a></li>
+          <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
       </nav>
     </header>
