--- a/v2/css/_global/_layout.scss
+++ b/v2/css/_global/_layout.scss
@@ -16,7 +16,19 @@ main:after {
 	width: 100%;
 	margin: 0;
   padding: 2rem 2rem 0;
+  .row {padding: 2rem 0 0;}
+  .column {padding: 1rem 0 0;}
+  h1 + .row,
+  h2 + .row,
+  h3 + .row,
+  h4 + .row {padding: 0.5rem 0 0;}
+  h1 + .column,
+  h2 + .column,
+  h3 + .column,
+  h4 + .column {padding: 0.5rem 0 0;}
 }
+
+.wide, .golden, .thirds, .fourths {width: 100%;}
 
 .row.border:after {
   display: block;
@@ -27,88 +39,60 @@ main:after {
   content: "";
 }
 
-.row > .row {padding: 2rem 0 0;}
-
-.row > h1 + .row,
-.row > h2 + .row,
-.row > h3 + .row {padding: 0.4rem 0 0;}
-
-.row.wide,
-.row.fifty,
-.row.golden,
-.row.thirds,
-.row.fourths {
-  .column {
-    width: 100%;
-    padding: 0;
-  }
-  .column:nth-of-type(2n) {padding: 1rem 0 0;}
-}
-
-h1 + .column {padding: 0.4rem 0 0;}
-h2 + .column {padding: 0.4rem 0 0;}
-h3 + .column {padding: 0.4rem 0 0;}
-
 @media (min-width: 48rem) {
   .row {
     flex-direction: row;
-    align-items: flex-start;
     flex-wrap: wrap;
   }
   .row.wide {flex-direction: column;}
   .row.fifty {
-    width: 100%;
     .column {width: 50%;}
-    .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-    .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
+    .column:nth-of-type(1n) {padding: 0.5rem 1rem 0 0;}
+    .column:nth-of-type(2n) {padding: 0.5rem 0 0 1rem;}
   }
   .row.golden.left {
-    width: 100;
     .column:nth-of-type(1n) {
       width: 62%;
-      padding: 0 1rem 0 0;
+      padding: 0.5rem 1rem 0 0;
     }
     .column:nth-of-type(2n) {
       width: 38%;
-      padding: 0 0 0 1rem;
+      padding: 0.5rem 0 0 1rem;
     }
   }
   .row.golden.right {
-    width: 100;
     .column:nth-of-type(1n) {
       width: 38%;
-      padding: 0 1rem 0 0;
+      padding: 0.5rem 1rem 0 0;
     }
     .column:nth-of-type(2n) {
       width: 62%;
-      padding: 0 0 0 1rem;
+      padding: 0.5rem 0 0 1rem;
     }
   }
   .row.thirds {
-    width: 100%;
-    .column {width: 33.3%;}
-    .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-    .column:nth-of-type(2n) {padding: 0 1rem 0 0;}
-    .column:nth-of-type(3n) {padding: 0 1rem 0 0;}
+    justify-content: space-between;
+    .column {
+      width: calc(33% - 1rem);
+      padding: 0.5rem 0 0 0;
+    }
   }
   .row.fourths {
-      width: 100%;
-      .column {width: 50%;}
-      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(2n) {padding: 0 0 0 1rem;}
-      .column:nth-of-type(3n) {padding: 1rem 1rem 0 0;}
-      .column:nth-of-type(4n) {padding: 1rem 0 0 1rem;}
-    }
+    .column {width: 50%;}
+    .column:nth-of-type(1n) {padding: 0.5rem 1rem 0 0;}
+    .column:nth-of-type(2n) {padding: 0.5rem 0 0 1rem;}
+    .column:nth-of-type(3n) {padding: 1rem 1rem 0 0;}
+    .column:nth-of-type(4n) {padding: 1rem 0 0 1rem;}
+  }
 }
 
 @media (min-width: 64rem) {
-  .row {
-    .fourths {
-      .column {width: 25%;}
-      .column:nth-of-type(1n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(2n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(3n) {padding: 0 1rem 0 0;}
-      .column:nth-of-type(4n) {padding: 0 1rem 0 0;}
-    }
+  .row.fourths {
+    justify-content: space-between;
+    .column {width: calc(25% - 1rem);}
+    .column:nth-of-type(1n),
+    .column:nth-of-type(2n),
+    .column:nth-of-type(3n),
+    .column:nth-of-type(4n) {padding: 0.5rem 0 0 0;}
   }
 }
