Typography page updates

--- a/v2/css/_global/_typography.scss
+++ b/v2/css/_global/_typography.scss
@@ -33,6 +33,9 @@ p + h1, p + h2, p + h3, p + h4,
 ul + h1, ul + h2, ul + h3, ul + h4,
 ol + h1, ol + h2, ol + h3, ol + h4 {padding: 2rem 0 0;}
 
+ul + h2, ul + h3, ul + h4,
+ol + h2, ol + h3, ol + h4 {padding: 1rem 0 0;}
+
 p {
   width: 100%;
   max-width: 39rem;
@@ -124,6 +127,31 @@ a:hover, a:focus {color: $secondary;}
 h1 a, h2 a, h3 a, h4 a {text-decoration: none;}
 
 p a, small a, li a {@include font-bold;}
+
+p.icon a {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  span {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+      margin: 0 0 0 0.25rem;
+      fill: $primary;
+      @include transition(all, 0.25s, ease);
+    }
+  }
+}
+
+p.icon a:hover span svg,
+p.icon a:focus span svg {
+  margin: 0 0 0 0.5rem;
+  fill: $secondary;
+}
 
 
 // CODE
